--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,7 +3,8 @@ flask-cors==4.0.0
 python-dotenv==1.0.0
 openai>=1.35.0
 httpx>=0.24.0
-langchain>=0.1.0
+langchain==0.3.27
 langchain-openai>=0.1.0
-langchain-core>=0.1.0
+langchain-core>=0.3.0
 pydantic>=2.0.0
+langchain-community>=0.3.0
